// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "default",
      "message": <div
        style={
          Object {
            "height": "1.5175em",
          }
        }
      />,
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.closable: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": true,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.closable: true",
      "message": "Message closable true",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.closeText: Close Text - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": true,
      "closeText": "Close Text",
      "description": undefined,
      "id": "properties.closeText: Close Text",
      "message": "Message closable true",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon object - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "icon": <IconBlock
        blockId="properties.icon object_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "color": "red",
            "name": "SettingOutlined",
            "spin": true,
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon object",
      "message": "Message with Icon!",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon string - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "icon": <IconBlock
        blockId="properties.icon string_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="CheckCircleOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon string",
      "message": "Message with Icon!",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.message - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.message",
      "message": "Alert message - Completed!",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: error - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: error",
      "message": "Alert message - error!",
      "onClose": [Function],
      "showIcon": true,
      "type": "error",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: error banner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": true,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: error banner: true",
      "message": "Alert message - error!",
      "onClose": [Function],
      "showIcon": true,
      "type": "error",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: error showIcon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: error showIcon: false",
      "message": "Alert message - error!",
      "onClose": [Function],
      "showIcon": false,
      "type": "error",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: info - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: info",
      "message": "Alert message - info!",
      "onClose": [Function],
      "showIcon": true,
      "type": "info",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: info banner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": true,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: info banner: true",
      "message": "Alert message - info!",
      "onClose": [Function],
      "showIcon": true,
      "type": "info",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: info showIcon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: info showIcon: false",
      "message": "Alert message - info!",
      "onClose": [Function],
      "showIcon": false,
      "type": "info",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: success - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: success",
      "message": "Alert message - success!",
      "onClose": [Function],
      "showIcon": true,
      "type": "success",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: success banner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": true,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: success banner: true",
      "message": "Alert message - success!",
      "onClose": [Function],
      "showIcon": true,
      "type": "success",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: success showIcon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: success showIcon: false",
      "message": "Alert message - success!",
      "onClose": [Function],
      "showIcon": false,
      "type": "success",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: warning - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: warning",
      "message": "Alert message - warning!",
      "onClose": [Function],
      "showIcon": true,
      "type": "warning",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: warning banner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": true,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: warning banner: true",
      "message": "Alert message - warning!",
      "onClose": [Function],
      "showIcon": true,
      "type": "warning",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: warning showIcon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": undefined,
      "id": "properties.type: warning showIcon: false",
      "message": "Alert message - warning!",
      "onClose": [Function],
      "showIcon": false,
      "type": "warning",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description only - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description only",
      "message": false,
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description only and icon false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description only and icon false",
      "message": false,
      "onClose": [Function],
      "showIcon": false,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.closable: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": true,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.closable: true",
      "message": "Message closable true",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.closeText: Close Text - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": true,
      "closeText": "Close Text",
      "description": "This is a description for the block.",
      "id": "with description properties.closeText: Close Text",
      "message": "Message closable true",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.icon object - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "icon": <IconBlock
        blockId="with description properties.icon object_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "color": "red",
            "name": "SettingOutlined",
            "spin": true,
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "with description properties.icon object",
      "message": "Message with Icon!",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.icon string - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "icon": <IconBlock
        blockId="with description properties.icon string_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [MockFunction],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="CheckCircleOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "with description properties.icon string",
      "message": "Message with Icon!",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.message - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.message",
      "message": "Alert message - Completed!",
      "onClose": [Function],
      "showIcon": true,
      "type": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: error - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: error",
      "message": "Alert message - error!",
      "onClose": [Function],
      "showIcon": true,
      "type": "error",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: error banner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": true,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: error banner: true",
      "message": "Alert message - error!",
      "onClose": [Function],
      "showIcon": true,
      "type": "error",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: error showIcon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: error showIcon: false",
      "message": "Alert message - error!",
      "onClose": [Function],
      "showIcon": false,
      "type": "error",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: info - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: info",
      "message": "Alert message - info!",
      "onClose": [Function],
      "showIcon": true,
      "type": "info",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: info banner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": true,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: info banner: true",
      "message": "Alert message - info!",
      "onClose": [Function],
      "showIcon": true,
      "type": "info",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: info showIcon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: info showIcon: false",
      "message": "Alert message - info!",
      "onClose": [Function],
      "showIcon": false,
      "type": "info",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: success - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: success",
      "message": "Alert message - success!",
      "onClose": [Function],
      "showIcon": true,
      "type": "success",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: success banner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": true,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: success banner: true",
      "message": "Alert message - success!",
      "onClose": [Function],
      "showIcon": true,
      "type": "success",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: success showIcon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: success showIcon: false",
      "message": "Alert message - success!",
      "onClose": [Function],
      "showIcon": false,
      "type": "success",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: warning - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: warning",
      "message": "Alert message - warning!",
      "onClose": [Function],
      "showIcon": true,
      "type": "warning",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: warning banner: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": true,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: warning banner: true",
      "message": "Alert message - warning!",
      "onClose": [Function],
      "showIcon": true,
      "type": "warning",
    },
    Object {},
  ],
]
`;

exports[`Mock render - with description properties.type: warning showIcon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "afterClose": [Function],
      "banner": undefined,
      "closable": undefined,
      "closeText": undefined,
      "description": "This is a description for the block.",
      "id": "with description properties.type: warning showIcon: false",
      "message": "Alert message - warning!",
      "onClose": [Function],
      "showIcon": false,
      "type": "warning",
    },
    Object {},
  ],
]
`;
